--- a/package.json
+++ b/package.json
@@ -5,5 +5,22 @@
   "dependencies": {
     "express": "^4.16.2",
     "socket.io": "^2.0.4"
-  }
+  },
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Z-Neutrino/HackNotts.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Z-Neutrino/HackNotts/issues"
+  },
+  "homepage": "https://github.com/Z-Neutrino/HackNotts#readme"
 }
